--- a/labs/devconf17.yml
+++ b/labs/devconf17.yml
@@ -26,7 +26,7 @@ modules:
     - docker
     - scaling
     - routes
-    - python
+    - python-github
     - databases-py
     - application-health
     - codechanges
