--- a/labs/devconf17.yml
+++ b/labs/devconf17.yml
@@ -1,4 +1,4 @@
-name: OpenShift DevConf 2017 Workshop
+name: DevConf 2017 OpenShift Workshop
 logo: devconf.png
 vars:
   DOWNLOAD_CLIENT_WINDOWS: "https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-64bit.tar.gz"
@@ -6,16 +6,16 @@ vars:
   DOWNLOAD_CLIENT_LIN32: "https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-32bit.tar.gz"
   DOWNLOAD_CLIENT_LIN64: "https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-64bit.tar.gz"
   ENVIRONMENT: "Google Cloud Platform"
-  CONSOLE_ADDRESS: "console.pixie.io:8443"
+  CONSOLE_ADDRESS: "console.devconf.pixie.io:8443"
   USER_NAME: "userXXX"
   USER_PASSWORD: "**********"
   EXPLORE_PROJECT_NAME: "user"
   USER_SUFFIX: "XXX"
-  ROUTER_ADDRESS: "apps.console.pixie.io"
+  ROUTER_ADDRESS: "apps.console.devconf.pixie.io"
   METRICS_ENABLED: false
   OPENSHIFT_NAME: "OpenShift Origin"
   OPENSHIFT_SHORTNAME: "OCO"
-  OPENSHIFT_VERSION: "1.4"
+  OPENSHIFT_VERSION: "1.4.1"
   DOCS_URL: "openshift.github.io"
   
 modules:
