--- a/labs/devconf17.yml
+++ b/labs/devconf17.yml
@@ -6,12 +6,12 @@ vars:
   DOWNLOAD_CLIENT_LIN32: "https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-32bit.tar.gz"
   DOWNLOAD_CLIENT_LIN64: "https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-64bit.tar.gz"
   ENVIRONMENT: "Google Cloud Platform"
-  CONSOLE_ADDRESS: "console.devconf.pixie.io:8443"
+  CONSOLE_ADDRESS: "console.devconf.pixy.io:8443"
   USER_NAME: "userXXX"
   USER_PASSWORD: "**********"
   EXPLORE_PROJECT_NAME: "user"
   USER_SUFFIX: "XXX"
-  ROUTER_ADDRESS: "apps.console.devconf.pixie.io"
+  ROUTER_ADDRESS: "apps.console.devconf.pixy.io"
   METRICS_ENABLED: false
   OPENSHIFT_NAME: "OpenShift Origin"
   OPENSHIFT_SHORTNAME: "OCO"
