--- a/labs/devconf17.yml
+++ b/labs/devconf17.yml
@@ -23,7 +23,7 @@ vars:
   NATIONALPARKS_VERSION: "1.0.0"
   MLBPARKS_VERSION: "1.0.0"
 
-  DOCS_URL: "openshift.github.io"
+  DOCS_URL: "docs.openshift.com/container-platform"
   
 modules:
   activate:
