--- a/labs/devconf17.yml
+++ b/labs/devconf17.yml
@@ -33,6 +33,7 @@ modules:
     - docker
     - scaling
     - routes
+    - permissions
     - python-github
     - databases-py
     - application-health
