added shell for openshift-architeture module

--- a/config/modules.yml
+++ b/config/modules.yml
@@ -1,3 +1,7 @@
+openshift-architecture:
+  name: OpenShift Architecture Overview
+  vars:
+    BACKEND: 'revealjs'
 environment:
   name: Lab Environment Overview
 install:
