--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "asciidoctor-deck.js"]
-	path = /asciidoctor-deck.js
-	url = git://github.com/asciidoctor/asciidoctor-deck.js.git
+	path = asciidoctor-deck.js
+	url = https://github.com/asciidoctor/asciidoctor-deck.js
