--- a/labs/praxis.yml
+++ b/labs/praxis.yml
@@ -29,6 +29,7 @@ modules:
   activate:
     - openshift-architecture
     - environment
+    - deploy-openshift
     - explore
     - parksmap-architecture
     - docker
