add simple-python module

--- a/labs/praxis.yml
+++ b/labs/praxis.yml
@@ -30,6 +30,7 @@ modules:
     - openshift-architecture
     - environment
     - deploy-openshift
+    - simple-python
     - explore
     - parksmap-architecture
     - docker
