--- a/config/modules.yml
+++ b/config/modules.yml
@@ -2,6 +2,8 @@ openshift-architecture:
   name: OpenShift Architecture Overview
 deploy-openshift:
   name: Deploy OpenShift Container Platform
+simple-python:
+  name: Deploy a Simple Application
 environment:
   name: Lab Environment Overview
 install:
