--- a/labs/praxis.yml
+++ b/labs/praxis.yml
@@ -31,6 +31,7 @@ modules:
     - environment
     - deploy-openshift
     - simple-python
+    - scaling
     - explore
     - parksmap-architecture
     - docker
