added kernel-capabilities and selinux modules

--- a/config/modules.yml
+++ b/config/modules.yml
@@ -30,6 +30,10 @@ simple-python:
   name: Deploy a Simple Application
 scaling:
   name: Scaling
+kernel-capabilities:
+  name: Kernel Capabilities
+selinux:
+  name: SELinux
 routes:
   name: Creating Routes
 logging:
