--- a/config/modules.yml
+++ b/config/modules.yml
@@ -34,6 +34,8 @@ kernel-capabilities:
   name: Kernel Capabilities
 selinux:
   name: SELinux
+atomic-scan:
+  name: Atomic Scan
 routes:
   name: Creating Routes
 logging:
