added s2i overview module

--- a/config/modules.yml
+++ b/config/modules.yml
@@ -36,6 +36,8 @@ selinux:
   name: SELinux
 atomic-scan:
   name: Atomic Scan
+s2i-overview:
+  name: Deploying Source Code
 routes:
   name: Creating Routes
 logging:
