added ci-cd-overview module

--- a/config/modules.yml
+++ b/config/modules.yml
@@ -75,6 +75,8 @@ codechanges:
   name: Using Source 2 Image for Code Changes
   requires:
 #    - databases
+ci-cd-overivew:
+  name: CI/CD Overview
 canaryrelease:
   name: Canary Release to Production
   requires:
