--- a/config/modules.yml
+++ b/config/modules.yml
@@ -65,18 +65,14 @@ configmap:
 #    - databases
 application-health:
   name: Application Health
-pipelines:
-  name: Automating Deployment with CI/CD Pipeline
-  requires:
-#    - java
-#    - databases
-    - application-health
 codechanges:
   name: Using Source 2 Image for Code Changes
   requires:
 #    - databases
-ci-cd-overivew:
+ci-cd-overview:
   name: CI/CD Overview
+pipelines:
+  name: Automating Deployment with CI/CD Pipeline
 canaryrelease:
   name: Canary Release to Production
   requires:
