--- a/labs/ocp3.6.yml
+++ b/labs/ocp3.6.yml
@@ -1,22 +1,21 @@
-name: Praxis OpenShift Workshop, June 8, 2017
+name: OpenShift 3.6 Workshop
 logo: redhat.png
 vars:
-  DOWNLOAD_CLIENT_WINDOWS: "https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-64bit.tar.gz"
-  DOWNLOAD_CLIENT_MAC: "https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-mac.zip"
-  DOWNLOAD_CLIENT_LIN32: "https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-32bit.tar.gz"
-  DOWNLOAD_CLIENT_LIN64: "https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-64bit.tar.gz"
+  DOWNLOAD_CLIENT_WINDOWS: "https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-windows.zip"
+  DOWNLOAD_CLIENT_MAC: "https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-mac.zip"
+  DOWNLOAD_CLIENT_LIN64: "https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-linux-64bit.tar.gz"
   ENVIRONMENT: "Amazon EC2"
   CONSOLE_ADDRESS: "workshop.xx.rhtps.io:8443"
   USER_NAME: "ec2-user"
   USER_PASSWORD: "Redhat1!"
   EXPLORE_PROJECT_NAME: "user"
   USER_SUFFIX: "XXX"
-  ROUTER_ADDRESS: "apps.console.xxxxxx.pixy.io"
+  ROUTER_ADDRESS: "apps.ose.xx.rhtps.io "
   METRICS_ENABLED: false
   OPENSHIFT_NAME: "OpenShift Container Platform"
   OPENSHIFT_SHORTNAME: "OCP"
-  OPENSHIFT_VERSION: "3.5.1"
-  OC_VERSION: "1.5.1"
+  OPENSHIFT_VERSION: "3.6"
+  OC_VERSION: "1.6.0"
   PARKSMAP_IMAGENAME: "parksmap-py"
   PARKSMAP_VERSION: "1.0.0"
   PARKSMAP_PY: true
@@ -24,7 +23,7 @@ vars:
   MLBPARKS_VERSION: "1.0.0"
 
   DOCS_URL: "docs.openshift.com/container-platform"
-  
+
 modules:
   activate:
     - openshift-architecture
