added practical_openscap_install module

--- a/labs/practical_openscap.yml
+++ b/labs/practical_openscap.yml
@@ -27,6 +27,7 @@ vars:
 modules:
   activate:
     - practical_openscap_intro
+    - practical_openscap_install
     - environment
     - deploy-openshift
     - simple-python
