added practical_openscap_remediation module

--- a/labs/practical_openscap.yml
+++ b/labs/practical_openscap.yml
@@ -30,3 +30,4 @@ modules:
     - practical_openscap_install
     - practical_openscap_basics
     - practical_openscap_scanning
+    - practical_openscap_remediation
