--- a/config/modules.yml
+++ b/config/modules.yml
@@ -105,3 +105,5 @@ practical_openscap_basics:
   name: Practical OpenSCAP - Basics
 practical_openscap_scanning:
   name: Practical OpenSCAP - Scanning and Reporting
+practical_openscap_remediation:
+  name: Practical OpenSCAP - Remediation
